Horizontal Scrolling fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
   font-family: "Poppins", sans-serif;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0rem;
